@startuml

title __DATABASE's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace database {
      abstract class com.cleanup.todoc.database.ToDoDatabase {
          {static} - INSTANCE : ToDoDatabase
          {static} + getInstance()
          {abstract} + projectDao()
          {abstract} + taskDao()
          {static} - prepopulateDatabase()
      }
    }
  }
  

  com.cleanup.todoc.database.ToDoDatabase -up-|> android.arch.persistence.room.RoomDatabase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter


title __INJECTIONS's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace injections {
      class com.cleanup.todoc.injections.Injection {
          {static} + provideViewModelFactory()
          {static} - provideExecutor()
          {static} - provideProjectDataSource()
          {static} - provideTaskDataSource()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace injections {
      class com.cleanup.todoc.injections.ViewModelFactory {
          - executor : Executor
          + create()
          ~ ViewModelFactory()
      }
    }
  }


  com.cleanup.todoc.injections.ViewModelFactory .up.|> android.arch.lifecycle.ViewModelProvider.Factory
  com.cleanup.todoc.injections.ViewModelFactory o-- com.cleanup.todoc.repositories.ProjectDataRepository : projectDataSource
  com.cleanup.todoc.injections.ViewModelFactory o-- com.cleanup.todoc.repositories.TaskDataRepository : taskDataSource


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

title __MODEL's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Project {
          - color : int
          - id : long
          - name : String
          + Project()
          {static} + getAllProjects()
          + getColor()
          + getId()
          + getName()
          {static} + getProjectById()
          + toString()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Task {
          - creationTimestamp : long
          - id : long
          - name : String
          - projectId : long
          + Task()
          + getCreationTimestamp()
          + getId()
          + getName()
          + getProject()
          + getProjectId()
          - setCreationTimestamp()
          - setId()
          - setName()
          - setProjectId()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Task.TaskAZComparator {
          + compare()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Task.TaskOldComparator {
          + compare()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Task.TaskRecentComparator {
          + compare()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Task.TaskZAComparator {
          + compare()
      }
    }
  }


  com.cleanup.todoc.model.Task +-down- com.cleanup.todoc.model.Task.TaskAZComparator
  com.cleanup.todoc.model.Task +-down- com.cleanup.todoc.model.Task.TaskOldComparator
  com.cleanup.todoc.model.Task +-down- com.cleanup.todoc.model.Task.TaskRecentComparator
  com.cleanup.todoc.model.Task +-down- com.cleanup.todoc.model.Task.TaskZAComparator
  com.cleanup.todoc.model.Task.TaskAZComparator .up.|> java.util.Comparator
  com.cleanup.todoc.model.Task.TaskOldComparator .up.|> java.util.Comparator
  com.cleanup.todoc.model.Task.TaskRecentComparator .up.|> java.util.Comparator
  com.cleanup.todoc.model.Task.TaskZAComparator .up.|> java.util.Comparator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

title __REPOSITORIES's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace repositories {
      class com.cleanup.todoc.repositories.ProjectDataRepository {
          + ProjectDataRepository()
          + getProjects()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace repositories {
      class com.cleanup.todoc.repositories.TaskDataRepository {
          + TaskDataRepository()
          + createTask()
          + deleteTask()
          + getTasks()
      }
    }
  }


  com.cleanup.todoc.repositories.ProjectDataRepository o-- com.cleanup.todoc.database.dao.ProjectDao : projectDao
  com.cleanup.todoc.repositories.TaskDataRepository o-- com.cleanup.todoc.database.dao.TaskDao : taskDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

title __UI's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace ui {
      class com.cleanup.todoc.ui.MainActivity {
          + dialog : AlertDialog
          - allProjects : List<Project>
          - dialogEditText : EditText
          - dialogSpinner : Spinner
          - lblNoTasks : TextView
          - listTasks : RecyclerView
          - tasks : ArrayList<Task>
          + onCreate()
          + onCreateOptionsMenu()
          + onDeleteTask()
          + onOptionsItemSelected()
          - addTask()
          - configureViewModel()
          - getAddTaskDialog()
          - getProjects()
          - getTasks()
          - onPositiveButtonClick()
          - populateDialogSpinner()
          - showAddTaskDialog()
          - updateProjects()
          - updateTasks()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace ui {
      enum SortMethod {
        ALPHABETICAL
        ALPHABETICAL_INVERTED
        NONE
        OLD_FIRST
        RECENT_FIRST
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace ui {
      class com.cleanup.todoc.ui.TasksAdapter {
          - tasks : List<Task>
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          ~ TasksAdapter()
          ~ updateTasks()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace ui {
      interface com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener {
          {abstract} + onDeleteTask()
      }
    }
  }


  namespace com.cleanup.todoc {
    namespace ui {
      class com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder {
          - imgDelete : AppCompatImageView
          - imgProject : AppCompatImageView
          - lblProjectName : TextView
          - lblTaskName : TextView
          ~ TaskViewHolder()
          ~ bind()
      }
    }
  }


  com.cleanup.todoc.ui.MainActivity .up.|> com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener
  com.cleanup.todoc.ui.MainActivity -up-|> android.support.v7.app.AppCompatActivity
  com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.ui.TasksAdapter : adapter
  com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.view_model.TaskViewModel : mTaskViewModel
  com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.ui.MainActivity.SortMethod : sortMethod
  com.cleanup.todoc.ui.MainActivity +-down- com.cleanup.todoc.ui.MainActivity.SortMethod
  com.cleanup.todoc.ui.TasksAdapter -up-|> android.support.v7.widget.RecyclerView.Adapter
  com.cleanup.todoc.ui.TasksAdapter o-- com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener : deleteTaskListener
  com.cleanup.todoc.ui.TasksAdapter +-down- com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener
  com.cleanup.todoc.ui.TasksAdapter +-down- com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder
  com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder -up-|> android.support.v7.widget.RecyclerView.ViewHolder
  com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder o-- com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener : deleteTaskListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

title __VIEW_MODEL's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace view_model {
      class com.cleanup.todoc.view_model.TaskViewModel {
          - executor : Executor
          - projects : LiveData<List<Project>>
          + TaskViewModel()
          + createTask()
          + deleteTask()
          + getProjects()
          + getTasks()
          + init()
      }
    }
  }


  com.cleanup.todoc.view_model.TaskViewModel -up-|> android.arch.lifecycle.ViewModel
  com.cleanup.todoc.view_model.TaskViewModel o-- com.cleanup.todoc.repositories.ProjectDataRepository : projectDataSource
  com.cleanup.todoc.view_model.TaskViewModel o-- com.cleanup.todoc.repositories.TaskDataRepository : taskDataSource


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
